--- a/week03/style.css
+++ b/week03/style.css
@@ -21,6 +21,7 @@ a{
     text-align: center;
     height: 20vh;
     width: 100vw;
+    margin-left: 15%;
 }
 #logotype{
     height: 150px;
@@ -65,6 +66,9 @@ nav li{
     padding: 10px;
     border: solid 1px white;
     text-decoration: none;
+}
+.info-left a:hover{
+    background-color: rgb(7, 87, 141);
 }
 .info-right{
     display: flex;
@@ -181,4 +185,46 @@ nav li{
     padding: 10px;
 }
 .h2{font-size: 20px;
-padding-bottom: 20pxpx;}
+padding-bottom: 20pxpx;
+}
+.footer{
+    padding: 30px;
+}
+.footer ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+}
+.footer li{
+    padding: 20px;
+}
+.footer a{
+    color:rgb(7, 87, 141);
+    font-size: 20px;
+    border: solid 1px rgb(142, 196, 233);
+    text-decoration: none;
+    padding: 10px;
+}
+.footer a:hover{
+    color: white;
+    background-color: rgb(7, 87, 141);
+}
+.footer h3{
+    color: black;
+    border: none;
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 1200px) {
+    .info-wrapper,.article-container,.direct-container,.nieuws-container,.meer,.link-wrapper{
+        padding:20px;
+    }
+    .nav ul{
+        justify-content: space-between;
+
+    }
+    .meld-u,.direct-naar h1, .nieuws h1{
+        margin: 20px;
+    }
+}
+
